fix overflow index

--- a/assets/css/layout/style.css
+++ b/assets/css/layout/style.css
@@ -5,10 +5,6 @@
   padding: 0;
 }
 
-html {
-  overflow: hidden;
-}
-
 div {
   box-sizing: border-box;
 }
